--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/
 
 ### IDE ###
 *.iml
+.idea
 
 /.idea/
 /.idea/caches
@@ -26,3 +27,16 @@ local.properties
 ### OS ###
 
 .DS_Store
+
+### iOS ###
+xcuserdata
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcodeproj/project.xcworkspace/
+!*.xcworkspace/contents.xcworkspacedata
+**/xcshareddata/WorkspaceSettings.xcsettings
+
+captures
+
+
